--- a/app/index.html
+++ b/app/index.html
@@ -169,6 +169,6 @@
   </div>
   <script type="text/javascript" src="./bower_components/d3/d3.js"></script>
   <script type="text/javascript" src="./bower_components/d3/colorbrewer/colorbrewer.js"></script>
-  <script type="text/javascript" src="/app.js"></script>
+  <script type="text/javascript" src="app.js"></script>
 </body>
 </html>
